unpackaged/main/default/objects/Withdrawal_Form__c/Withdrawal_Form__c.object-meta.xml
<CustomObject>
    <label>Withdrawal Form</label>
    <nameField>
        <label>Withdrawal Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withdrawal Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>