unpackaged/main/default/objects/Withdrawal_Form__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Withdrawal Forms</relationshipLabel>
    <relationshipName>Withdrawal_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>