unpackaged/main/default/objects/Withdrawal_Form__c/fields/Internal_Staff_Notified__c.field-meta.xml
<CustomField>
    <fullName>Internal_Staff_Notified__c</fullName>
    <label>Internal Staff Notified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Student Onboarding Advisor</fullName>
            </value>
            <value>
                <fullName>Academic Success Coach</fullName>
            </value>
            <value>
                <fullName>Student Life Coordinator</fullName>
            </value>
            <value>
                <fullName>Program Leader</fullName>
            </value>
            <value>
                <fullName>Professor(s)</fullName>
            </value>
            <value>
                <fullName>College Counselor</fullName>
            </value>
            <value>
                <fullName>Admissions Counselor</fullName>
            </value>
            <value>
                <fullName>No, I have not spoken with anyone about my intent to withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>