unpackaged/main/default/objects/Withdrawal_Form__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Withdrawal_Reasoning</valueSetName>
    </valueSet>
</CustomField>