unpackaged/main/default/objects/Withdrawal_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>Email__c</columns>
    <columns>Reason__c</columns>
    <columns>Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>